compiler-core/main/__core/type_/snapshots/gleam_core____core__type___tests__string_concat_ko_1.snap
---
source: compiler-core/src_refactored/__core/type_/tests.rs
assertion_line: 2721
expression: " \"1\" <> 2 "
snapshot_kind: text
---
----- SOURCE CODE
 "1" <> 2 

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:9
  │
1 │  "1" <> 2 
  │         ^

The <> operator expects arguments of this type:

    String

But this argument has this type:

    Int
